--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
-  <div class="wrapper">
+  <h5 align="center"> はく. All Rights Reserved. | <a href="/about/" style="color:inherit"> Contact </a> </h3>
+<!--   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
@@ -30,6 +31,6 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
 
 </footer>
