--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
-  <h5 align="center"> はく. All Rights Reserved. | <a href="/about/" style="color:inherit"> Contact </a> </h3>
+  <h5 align="center"> <a href="/about/" style="color:inherit"> KONTAKT </a> </h3>
 <!--   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
