--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,8 +1,14 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
+// "Segoe UI", Roboto, Helvetica, Arial, sans-serif
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+@font-face {
+  font-family: "HanaMinA";
+  src: url("/assets/font/HanaMinA.ttf") format("ttf");
+}
+
+$base-font-family: -apple-system, BlinkMacSystemFont, "Century Gothic", AppleGothic, sans-serif, "HanaMiniA", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
