update more style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,6 +30,17 @@ layout: default
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%} -->
-  <img src="/assets/image/logo.png" alt="logo">
+  <style>
+    .verticalhorizontal {
+      display: table-cell;
+      height: 702px;
+      width: 702px;
+      text-align: center;
+      vertical-align: middle;
+    }
+  </style>
+  <div class="verticalhorizontal">
+    <img src="/assets/image/logo.png" alt="logo" >
+  </div>
 
 </div>
