update audio control

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: default
     }
   </style>
   <div class="verticalhorizontal">
-    <img src="/assets/image/logo.png" alt="logo" >
+    <a href="/gallery"><img src="/assets/image/logo.png" alt="logo" ></a>
   </div>
 
 </div>
