--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 ---
+
+<link type="text/css" rel="stylesheet" href="/assets/css/main.css">
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
+    <h1 class="post-title p-name" itemprop="name headline" align="middle">
+	  {{ page.title | escape }}
+	</h1>
+    <p class="post-meta" align="middle">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
@@ -16,6 +21,13 @@ layout: default
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
+	{%- if page.image -%}
+	<div class="img-content" align="middle">
+	  <img src={{ page.image | relative_url }}>
+	  <p> <br /> </p>
+	</div>
+	{%- endif -%}
+	  
     {{ content }}
   </div>
 
