--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@
 	max-height: 200px;
 }
 
-.img-grid-row a:not(:last-child) {
+.img-grid-row a {
 	margin-top: 25px;
 	margin-bottom: 25px;
 	margin-right: 64px;
@@ -27,6 +27,7 @@
 .img-grid-row a:last-child {
 	margin-top:25px;
 	margin-bottom: 25px;
+	margin-right: 0px;
 	vertical-align: middle;
 }
 
@@ -37,22 +38,39 @@
 /*   } */
 /* } */
 
-@media screen and (max-width: 750px) {
-  .img-grid-row {
-    flex-direction: column;
-    max-width: 100%;
-  }
-
-  .img-grid-row a {
-	  margin-top:25px;
-	  margin-bottom: 25px;
-	  vertical-align: middle;
-  }
-}
-
 .img-content img {
 	min-height: 600px;
 	min-width: 600px;
 	max-height: 600px;
 	max-width: 600px;
+}
+
+
+@media screen and (max-width: 800px) {
+  .img-grid-row img {
+	  min-height: auto;
+	  min-width: 250px;
+	  max-width: 250px;
+	  max-height: 250px;
+}
+	
+  .img-grid-row {
+      flex-direction: column;
+	  align-items: center;
+      max-width: 100%;
+  }
+
+  .img-grid-row a {
+	  margin-top:25px;
+	  margin-bottom: 25px;
+	  margin-right: 0px;
+	  vertical-align: middle;
+  }
+
+  .img-content img {
+	min-height: 250px;
+	min-width: 250px;
+	max-height: 250px;
+	max-width: 250px;
+}
 }
